# llm_judge

./: .gitignore  pyproject.toml
benchmark/: run_benchmark.py
src/agent/: mock_agent.py  react_agent.py
src/agent/domain_agents/: diagnosis_agent.py
src/agent/langgraph/: react_agent.py
src/agent/langgraph/domain_agents/: diagnosis_agent.py
src/agent/llm/: model_factory.py
src/agent/utils/: loggers.py  mcp_servers.py  summarizer.py  template.py
src/nika/cli/commands/: benchmark.py  evaluation.py  failure.py
src/nika/codex_cli/commands/: benchmark.py  evaluation.py
src/nika/evaluator/: base_judge.py  llm_judge.py  multi_agent_judge.py  schemas.py  token_meter.py
src/nika/evaluator/metrics/: compute_metrics.py  krippendorff_alpha.py  opinion_shift.py  spearman_correlation.py  test_retest.py
src/nika/evaluator/multi_role_debate/: __init__.py  aggregator.py  debater.py  multi_role_debate_judge.py  roles_config.py
src/nika/generator/fault/: injector_base.py  injector_host.py  injector_service.py
src/nika/service/kathara/: base_api.py  docker_utils.py  frr_api.py
src/nika/workflows/: benchmark_run.py  failure_inject.py  session_eval.py
src/scripts/: step2_failure_inject.py  step4_result_eval.py
tests/: test_docker_utils.py  test_multi_role_debate.py  test_pipeline.py  test_session_propagation.py
tests/failure_inject_verify/: base.py  test_end_host_dns_crash_verify.py  test_host_misconfig_verify.py  test_link_failure_verify.py  test_misconfig_verify.py  test_network_attack_verify.py  test_node_error_verify.py  test_resource_contention_verify.py
(+20 files in other folders)
