[build-system]
requires = ["setuptools>=61,<80"]
build-backend = "setuptools.build_meta"

[project]
name = "nika"
version = "1.0.0"
description = ""
authors = [{ name = "Zhihao Wang", email = "zhihaowang9802@gmail.com" }, 
           { name = "Alessandro Cornacchia", email = "alessandro.cornacchia@kaust.edu.sa" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "openai",
    "instructor",
    "kathara",
    "langfuse",
    "python-dotenv",
    "langchain-deepseek",
    "langgraph",
    "mcp[cli]",
    "langchain-mcp-adapters",
    "langchain-ollama",
    "langchain",
    "typer>=0.25.1",
    "func_timeout",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "networkx>=3.6",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]

[project.scripts]
nika = "nika.codex_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nika*", "agent*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:fs.opener",
    "ignore::DeprecationWarning:pkg_resources",
]
